packages/next-swc/crates/core/tests/errors/styled-jsx/no-child/input.js
export default () => (
  <div>
    <style jsx>
    </style>
  </div>
)
